cmake_minimum_required(VERSION 2.8)
PROJECT(indi-mqtt NONE)

set (VERSION_MAJOR 1)
set (VERSION_MINOR 0)
set (VERSION_RELEASE 0)

set(BIN_INSTALL_DIR "/usr/bin")
set(CONFIG_INSTALL_DIR "/etc")

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/indi-mqtt.py DESTINATION ${BIN_INSTALL_DIR})
	install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/indi-mqtt.conf DESTINATION ${CONFIG_INSTALL_DIR})
	install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/indi-mqtt.service DESTINATION ${CONFIG_INSTALL_DIR}/systemd/system)
endif()
